fix overflow

--- a/cover.css
+++ b/cover.css
@@ -20,6 +20,7 @@
 
 body {
   text-shadow: 0 .05rem .1rem rgba(0, 0, 0, .5);
+  box-shadow: inset 0 0 5rem rgba(0, 0, 0, 0.5);
   transition: box-shadow 0.35s ease-in-out;
 }
 
@@ -101,15 +102,6 @@ img {
   margin-left: 20px;
   margin-bottom: 20px;
 }
-
-
-@media (min-width: 576px) and (min-height: 617px) {
-  body {
-    box-shadow: inset 0 0 5rem rgba(0, 0, 0, 0.5);
-    transition: box-shadow 0.35s ease-in-out;
-  }
-}
-
 
 /* Footer */
 .footer {
